frontend architect setup

--- a/isah_leeromgeving_api_versie1/wwwroot/onlinecourses.html
+++ b/isah_leeromgeving_api_versie1/wwwroot/onlinecourses.html
@@ -34,9 +34,11 @@
         </div>
 
         <div class="row">
-            <section id="onlinecourses" class="centerlmnt">
-                
-            </section>
+            <section id="coursesTab" class="centerlmnt"></section>
+        </div>
+
+        <div class="row">
+            <section id="onlinecourses" class="centerlmnt"></section>
         </div>
 
         <div class="row">
@@ -44,6 +46,9 @@
         </div>
     </div>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="javasript/CoursesViewReceiver.js"></script>
+    <script src="javasript/sender/CoursesViewSender.js"></script>
+    <script src="javasript/builder/CoursesViewBuilder.js"></script>
+    <script src="javasript/receiver/CoursesViewReceiver.js"></script>
+    <script src="javasript/onlinecourses.js"></script>
 </body>
 </html>
