--- a/isah_leeromgeving_api_versie1/wwwroot/creatediagram.html
+++ b/isah_leeromgeving_api_versie1/wwwroot/creatediagram.html
@@ -22,7 +22,7 @@
                     <a class="navitem" href="index.html">Home</a> |
                     <a class="navitem" href="functionaliteiten.html">Functionaliteiten</a> |
                     <a class="navitem" href="onlinecourses.html">Online cursussen</a> |
-                    <a class="navitem" href="offlinecourses.html">Offline cursussen</a>
+                    <a class="navitem" href="https://isah.com/klantondersteuning/trainingen/">Offline cursussen</a>
                 </nav>
             </div>
             <div id="banner">
