--- a/isah_leeromgeving_api_versie1/wwwroot/slide.html
+++ b/isah_leeromgeving_api_versie1/wwwroot/slide.html
@@ -24,17 +24,15 @@
                     <a class="navitem" href="index.html">Home</a> |
                     <a class="navitem" href="functionaliteiten.html">Functionaliteiten</a> |
                     <a class="navitem" href="onlinecourses.html">Online cursussen</a> |
-                    <a class="navitem" href="offlinecourses.html">Offline cursussen</a>
+                    <a class="navitem" href="https://isah.com/klantondersteuning/trainingen/">Offline cursussen</a><!--offlinecourses.html-->
                 </nav>
-            </div>
-            <div id="banner">
-                <img id="img_banner" src="images/koffie_banner.jpg" alt="koffie">
-                <h1 id="pagetitle">Online cursussen</h1>
             </div>
         </div>
 
         <div class="row">
-            <section id="video" class="centerlmnt"></section>
+            <section id="slide" class="centerlmnt">
+                
+            </section>
         </div>
 
         <div class="row">
