--- a/isah_leeromgeving_api_versie1/wwwroot/alldiagrams.html
+++ b/isah_leeromgeving_api_versie1/wwwroot/alldiagrams.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Offline cursussen</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles/main_styles.css">
 </head>
 <body>
@@ -25,21 +25,22 @@
                     <a class="navitem" href="https://isah.com/klantondersteuning/trainingen/">Offline cursussen</a>
                 </nav>
             </div>
-            <div id="banner">
-                <img id="img_banner" src="images/koffie_banner.jpg" alt="koffie">
-            </div>
         </div>
 
         <div class="row">
-            <main class="centerlmnt">
-                <h1>Offline cursussen</h1>
-            </main>
+            <section id="alldiagrams" class="centerlmnt">
+
+                
+            </section>
         </div>
 
         <div class="row">
             <footer class="centerlmnt"><p>&copy; 2018 Isah Business Software</p></footer>
         </div>
     </div>
-
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="javasript/builder/DiagramViewBuilder.js"></script>
+    <script src="javasript/receiver/DiagramsViewReceiver.js"></script>
+    <script src="javasript/alldiagrams.js"></script>
 </body>
 </html>
