--- a/isah_leeromgeving_api_versie1/wwwroot/index.html
+++ b/isah_leeromgeving_api_versie1/wwwroot/index.html
@@ -20,7 +20,7 @@
             <div class="centerlmnt">
                 <nav>
                     <a class="navitem" href="index.html">Home</a> |
-                    <a class="navitem" href="functionaliteiten.html">Functionaliteiten</a> |
+                    <a class="navitem" href="alldiagrams.html">Diagrammen</a> |
                     <a class="navitem" href="onlinecourses.html">Online cursussen</a> |
                     <a class="navitem" href="https://isah.com/klantondersteuning/trainingen/">Offline cursussen</a>
                 </nav>
@@ -39,7 +39,8 @@
 
         <div class="row">
             <main class="centerlmnt">
-                <h1>Home</h1>
+                <h1>Isah. De business software voor de maakindustrie.</h1>
+                Isah Business Software is specifiek ontwikkeld voor de maakindustrie. De standaardfunctionaliteit sluit dan ook perfect aan bij de eisen en ambities van maakbedrijven. Isah versterkt de unieke kracht van uw maakbedrijf en helpt u om met de gekozen strategie succesvol te zijn. We streven naar een verhoging van uw efficiency, rendement en winst in een competitieve en technologisch snel veranderende markt. Meer dan 700 maakbedrijven wereldwijd werken met Isah Business Software.
             </main>
         </div>
 
@@ -47,6 +48,5 @@
             <footer class="centerlmnt"><p>&copy; 2018 Isah Business Software</p></footer>
         </div>
     </div>
-
-    </body>
-    </html>
+</body>
+</html>
