--- a/isah_leeromgeving_api_versie1/wwwroot/functionaliteiten.html
+++ b/isah_leeromgeving_api_versie1/wwwroot/functionaliteiten.html
@@ -20,7 +20,7 @@
             <div class="centerlmnt">
                 <nav>
                     <a class="navitem" href="index.html">Home</a> |
-                    <a class="navitem" href="functionaliteiten.html">Functionaliteiten</a> |
+                    <a class="navitem" href="alldiagrams.html">Diagrammen</a> |
                     <a class="navitem" href="onlinecourses.html">Online cursussen</a> |
                     <a class="navitem" href="https://isah.com/klantondersteuning/trainingen/">Offline cursussen</a>
                 </nav>
